# spec

./: .gitignore  .pre-commit-config.yaml  AI-INTEGRATION-PLAN.md  CLAUDE.md  GIT-HOOK-PLAN.md  MAINTENANCE.md  PLAN.md  PYTHON-VERSION-COMPATIBILITY.md  README.md  REFACTORING-PLAN.md  fixes.md  progress.md  pyproject.toml  slices.md
.github/: test-release.md
.github/workflows/: ci.yml  release.yml
.pre-commit-hooks/: check-deps.yaml
REFACTORING-PLAN/: checklist.md  index.md
REFACTORING-PLAN/PHASE-1-foundation/: README.md  slice-1-exceptions.md  slice-2-logging.md  slice-3-configuration.md  slice-3a-settings-console.md  slice-3b-config-loader.md
REFACTORING-PLAN/PHASE-2-filesystem/: README.md  slice-4-path-resolution.md  slice-5-file-analysis.md  slice-5a-file-type-detection.md  slice-5b-file-metadata.md  slice-6-directory-management.md  slice-6a-ignore-patterns.md  slice-6b-directory-operations.md
REFACTORING-PLAN/PHASE-3-templates/: README.md  slice-7-template-config.md  slice-8-template-generation.md  slice-8a-template-substitution.md  slice-8b-spec-generator.md  slice-8c-ai-hooks.md
REFACTORING-PLAN/PHASE-4-git-core/: README.md  slice-10-spec-repository.md  slice-10a-repo-init.md  slice-10b-commit-wrappers.md  slice-10c-spec-workflow.md  slice-11-file-processing.md  slice-11a-change-detection.md  slice-11b-conflict-resolver.md  slice-11c-batch-processor.md  slice-9-git-operations.md
REFACTORING-PLAN/PHASE-5-interface/: README.md  slice-12-rich-ui.md  slice-12a-console-theme.md  slice-12b-progress-components.md  slice-12c-formatter-error-views.md  slice-13-cli-commands.md  slice-13a-core-cli-scaffold.md  slice-13b-generate-suite.md  slice-13c-diff-history-suite.md
docs/: DEPENDENCY-SYNC-SOLUTION.md  DEVELOPMENT-SCRIPTS.md
scripts/: auto-stage-formatted.py  check-deps-consistency.py  dev_runners.py  poetry-commands.sh  sync-pre-commit.py
spec_cli/: __init__.py  __main__.py  exceptions.py
spec_cli/cli/: app.py  base_command.py  exceptions.py  options.py  utils.py
spec_cli/cli/commands/: __init__.py  add.py  add_command.py  check_imports.py  commit.py  diff.py  gen.py  gen_command.py  help.py  init.py  log.py  regen.py  show.py  status.py
spec_cli/config/: __init__.py  loader.py  settings.py  validation.py
spec_cli/core/: __init__.py  commit_manager.py  error_handler.py  repository_init.py  repository_state.py  workflow_orchestrator.py  workflow_state.py
spec_cli/core/executors/: __init__.py  workflow_executor.py
spec_cli/core/managers/: __init__.py  backup_manager.py
spec_cli/core/validators/: __init__.py  workflow_validator.py
spec_cli/file_processing/: __init__.py  batch_processor.py  change_detector.py  conflict_resolver.py  file_cache.py  merge_helpers.py  processing_pipeline.py  progress_events.py
spec_cli/file_processing/aggregators/: __init__.py  result_aggregator.py
spec_cli/file_processing/trackers/: __init__.py  batch_progress_tracker.py
spec_cli/file_system/: __init__.py  directory_manager.py  directory_traversal.py  file_metadata.py  file_type_detector.py  file_utils.py  ignore_patterns.py  path_resolver.py  path_utils.py
spec_cli/git/: operations.py  path_converter.py  repository.py
spec_cli/logging/: debug.py  timing.py
spec_cli/templates/: __init__.py  ai_integration.py  config.py  defaults.py  generator.py  loader.py  substitution.py
spec_cli/ui/: console.py  error_display.py  progress_bar.py  progress_manager.py  progress_utils.py  rich_imports.py  spinner.py  styles.py  tables.py  theme.py
spec_cli/utils/: dependency_validator.py  env_utils.py  error_handler.py  error_utils.py  path_utils.py  security_validators.py  singleton.py  workflow_utils.py
spec_cli/validation/: __init__.py  import_validator.py
tests/: __init__.py
tests/integration/: test_slice_1a_integration.py  test_slice_1b_integration.py
tests/unit/: test_cmd_gen.py  test_content_generation.py  test_debug_functionality.py  test_directory_creation.py  test_duplicate_handling.py  test_exceptions.py  test_file_filtering.py  test_main.py  test_path_resolution.py  test_template_system.py
tests/unit/cli/: test_app.py  test_base_command.py  test_exceptions.py  test_options.py  test_utils.py
tests/unit/config/: test_config_error_integration.py  test_loader.py  test_settings.py  (+1 more)
(+111 files in other folders)
