[tool.poetry]
name = "spec"
version = "0.1.56"
description = "A versioned documentation layer for AI-assisted development"
authors = ["Spenser McConnell <spensermcconnell@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Spenquatch/spec"
repository = "https://github.com/Spenquatch/spec"
keywords = ["documentation", "ai", "development", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
]
packages = [{include = "spec_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.1"
rich-click = "^1.7.1"
pydantic = "^2.11.5"
pyyaml = "^6.0.1"
markdown = "^3.8"
markupsafe = "^3.0.2"
tenacity = "^9.1.2"
rich = "^14.0.0"
tomli = "^2.2.1"
urllib3 = "^2.4.0"
typing-extensions = "^4.14.0"
platformdirs = "^4.3.8"
pluggy = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
pytest-asyncio = "^1.0.0"
ruff = "^0.11.12"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
types-PyYAML = "^6.0.12.20250516"
coverage = "^7.8.2"
filelock = "^3.18.0"
identify = "^2.6.12"
pyyaml-env-tag = "^1.1"
pydocstyle = "^6.3.0"
bandit = "^1.7.8"
pip-audit = "^2.7.3"
types-click = "^7.1.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
watchdog = "^6.0.0"
mkdocs-material = "^9.6.14"

[tool.poetry.scripts]
spec = "spec_cli.__main__:main"

# Development task runners (standardized names)
dev-setup = "scripts.dev_runners:dev_setup"
type-check = "scripts.dev_runners:type_check"
lint = "scripts.dev_runners:lint"
format = "scripts.dev_runners:format"
lint-and-format = "scripts.dev_runners:lint_and_format"
format-check = "scripts.dev_runners:format_check"
docs = "scripts.dev_runners:docs"
security = "scripts.dev_runners:security"
audit = "scripts.dev_runners:audit"
test = "scripts.dev_runners:test"
platform-check = "scripts.dev_runners:platform_check"
check-all = "scripts.dev_runners:check_all"
update-deps = "scripts.dev_runners:update_deps"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff replaces Black, isort, and many other tools
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
# Enable auto-formatting
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Allow untyped decorators in test files (pytest fixtures)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
warn_unreachable = false
warn_unused_ignores = false
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["spec_cli"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.bandit]
# Security scanning configuration following industry best practices
exclude_dirs = ["tests", "scripts"]

[tool.spec]
# Default configuration for spec
default_model = "gpt-4"
default_provider = "openai"
max_tokens = 4000
temperature = 0.3
